[package]
name = "ipchk"
version = "0.2.0"
edition = "2024"

[dependencies]
pico-args = "0.5"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_NetworkManagement_IpHelper","Win32_Foundation"] }

[profile.dev]
opt-level = 1
debug = true
strip = "symbols"
lto = false
codegen-units = 2
panic = "unwind"

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
panic = "abort"
